--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
         ]
     },
     "devDependencies": {
+        "@babel/core": "^7.15.0",
+        "@babel/eslint-parser": "^7.15.0",
+        "@babel/preset-react": "^7.14.5",
         "eslint": "^7.32.0",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-jest": "^24.4.0",
