--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^12.1.10",
         "firebase": "^9.0.0",
         "formik": "^2.2.9",
+        "history": "^5.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.0-beta.2",
